--- a/index.html
+++ b/index.html
@@ -3,42 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon Affiliate Store</title>
+    <title>Top 10 Amazon Products</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
-        #rss-feed div { border: 1px solid #ddd; padding: 10px; margin: 10px; text-align: center; }
-        img { max-width: 100px; }
+        body { font-family: Arial, sans-serif; text-align: center; margin: 20px; background-color: #f8f9fa; }
+        .container { max-width: 900px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); }
+        h1 { color: #333; }
+        p { font-size: 18px; color: #555; }
+        .button { display: inline-block; padding: 10px 20px; background: #ff9900; color: white; text-decoration: none; border-radius: 5px; font-size: 18px; }
+        .button:hover { background: #cc7a00; }
+        .category { margin-top: 30px; }
+        .product-list { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; }
+        .product { width: 250px; background: white; padding: 10px; border-radius: 5px; box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1); }
+        .product img { max-width: 100%; height: auto; }
     </style>
 </head>
 <body>
 
-    <h1>Welcome to My Amazon Affiliate Store</h1>
-    <p>Check out the latest bestsellers:</p>
+    <div class="container">
+        <h1>Discover the Top 10 Products in Each Category</h1>
+        <p>We bring you the **top 10 best-selling** products in different categories, updated regularly. Find the best deals and trending items from Amazon.</p>
+    </div>
 
-    <div id="rss-feed">Loading products...</div>
+    <div class="container category">
+        <h2>Top 10 Bestselling Electronics</h2>
+        <div class="product-list" id="electronics"></div>
+    </div>
+
+    <div class="container category">
+        <h2>Top 10 Bestselling Fashion</h2>
+        <div class="product-list" id="fashion"></div>
+    </div>
+
+    <div class="container category">
+        <h2>Top 10 Bestselling Home & Kitchen</h2>
+        <div class="product-list" id="home"></div>
+    </div>
+
+    <div class="container category">
+        <h2>Top 10 Bestselling Beauty & Personal Care</h2>
+        <div class="product-list" id="beauty"></div>
+    </div>
+
+    <div class="container category">
+        <h2>Top 10 Bestselling Books</h2>
+        <div class="product-list" id="books"></div>
+    </div>
 
     <script>
-      async function fetchRSS() {
-        const rssUrl = "https://www.amazon.in/rss/bestsellers/electronics/?tag=dd1430e-21";
-        const response = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(rssUrl)}`);
-        const data = await response.json();
+        async function fetchProducts(category, elementId) {
+            const rssUrl = `https://www.amazon.in/rss/bestsellers/${category}/?tag=dd1430e-21`;
+            const response = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(rssUrl)}`);
+            const data = await response.json();
 
-        let content = "";
-        data.items.forEach(item => {
-          content += `
-            <div>
-              <h3><a href="${item.link}" target="_blank">${item.title}</a></h3>
-              <img src="${item.thumbnail}" width="100">
-              <p>${item.description}</p>
-            </div>
-          `;
-        });
+            let content = "";
+            data.items.slice(0, 10).forEach(item => {
+                content += `
+                    <div class="product">
+                        <h3><a href="${item.link}" target="_blank">${item.title}</a></h3>
+                        <img src="${item.thumbnail}">
+                    </div>
+                `;
+            });
 
-        document.getElementById("rss-feed").innerHTML = content;
-      }
+            document.getElementById(elementId).innerHTML = content;
+        }
 
-      fetchRSS();
+        fetchProducts("electronics", "electronics");
+        fetchProducts("fashion", "fashion");
+        fetchProducts("home-kitchen", "home");
+        fetchProducts("beauty", "beauty");
+        fetchProducts("books", "books");
     </script>
 
 </body>
 </html>
+
